# test_ugs_polls

./: pyproject.toml
app/: models.py  views.py
